--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "maxrects-packer": "^2.7.3",
     "metaversefile": "./packages/totum",
     "openai-api": "^1.3.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-player": "^2.11.0",
     "smile2emoji": "^1.1.6",
     "stats.js": "^0.17.0",
     "three": "./packages/three",
